--- a/idex.html
+++ b/idex.html
@@ -1,44 +1,95 @@
-# Projeto de Estudo: Página sobre One Piece
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-Este projeto faz parte do meu processo de aprendizado em HTML, CSS e JavaScript, concentrado na criação de uma página web dedicada ao famoso anime e mangá One Piece. O objetivo é aprimorar minhas habilidades de desenvolvimento web enquanto exploro o vasto mundo deste anime cativante.
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-## Descrição
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap" rel="stylesheet">
 
-O projeto consiste na construção de uma página web interativa e responsiva sobre One Piece. Utilizei HTML para estruturar o conteúdo da página, CSS para estilização e JavaScript para adicionar interatividade e elementos dinâmicos.
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 
-## Tecnologias Utilizadas
+    <title>One Piece - Semana do Zero ao Programador Contratado</title>
+</head>
 
-- **HTML**: Utilizado para estruturar e organizar o conteúdo da página.
-- **CSS**: Responsável pela estilização e aparência visual da página.
-- **JavaScript**: Adicionou funcionalidades interativas, como slideshows, quizzes ou informações dinâmicas.
+<body>
+    <main class="personagens">
+        <div class="personagem">
+            <img class="imagem" src="./src/imagens/personagem-tony-chopper.png" alt="Personagem Tony Chopper">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Tony Chopper</h2>
+                <p class="descricao">Esta pequena rena ganhou a habilidade de mudar sua forma e de pensar como humanos após comer a fruta Hito Hito no Mi. Chopper é um valioso membro da tripulação dos Piratas do Chapéu de Palha, atuando como médico da tripulação.</p>
+            </div>
+        </div>
 
-## Funcionalidades
+        <div class="personagem">
+            <img class="imagem" src="./src/imagens/personagem-roronoa-zoro.png" alt="Personagem Roronoa Zoro">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Roronoa Zoro</h2>
+                <p class="descricao">Primeiro pirata (segundo membro se contarmos com Luffy) a se juntar à tripulação de Piratas do Chapéu de Palha, Zoro aceitou o convite de Luffy após o capitão salvar sua vida.</p>
+            </div>
+        </div>
 
-- **Apresentação dos Personagens**: Detalhes, imagens e informações sobre os personagens de One Piece.
-- **História e Universo**: Informações sobre a história, os arcos e o universo do anime/mangá.
-- **Possíveis Elementos Interativos**: Como botões para explorar personagens, quizzes sobre o enredo e recursos dinâmicos.
+        <div class="personagem selecionado">
+            <img class="imagem" src="./src/imagens/personagem-monkey-d-luffy.png" alt="Personagem Monkey D. Luffy">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Monkey D. Luffy</h2>
+                <p class="descricao">Luffy do Chapéu de Palha", como ficou conhecido, é o protagonista do anime, e o fundador e capitão da tripulação Piratas do Chapéu de Palha. Desde muito jovem, tem como seu maior sonho um dia encontrar o lendário tesouro de Gol D. Roger, para se tornar o novo Rei dos Piratas.</p>
+            </div>
+        </div>
 
-## Objetivos de Aprendizado
+        <div class="personagem">
+            <img class="imagem" src="./src/imagens/personagem-nami.png" alt="Personagem Nami">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Nami</h2>
+                <p class="descricao">Uma órfã de guerra, ainda criança Nami foi adotada por Bell-mère, uma mulher da Marinha. Enquanto crescia ao lado de sua irmã adotiva Nojiko, Nami já demonstrava sua paixão por desenhar mapas, sonhando em um dia fazer o mapa de todo o mundo.</p>
+            </div>
+        </div>
 
-Este projeto tem como objetivo:
+        <div class="personagem">
+            <img class="imagem" src="./src/imagens/personagem-sanji.png" alt="Personagem Sanji">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Sanji</h2>
+                <p class="descricao">Também conhecido como "Perna Negra" Sanji, este pirata foi o quinto a integrar a tripulação de Luffy. Suas ações como pirata lhe renderam a terceira maior recompensa entre os membros do Chapéu de Palha, além de atuar como cozinheiro oficial do grupo.</p>
+            </div>
+        </div>
+    </main>
+    <ul class="botoes">
+        <li>
+            <button class="botao">
+                <img src="./src/imagens/tripulacao-chopper.png" alt="Tripulação Chopper">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./src/imagens/tripulacao-zoro.png" alt="Tripulação Roronoa Zoro">
+            </button>
+        </li>
+        <li>
+            <button class="botao selecionado">
+                <img src="./src/imagens/tripulacao-luffy.png" alt="Tripulação Monkey D. Luffy">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./src/imagens/tripulacao-nami.png" alt="Tripulação Nami">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./src/imagens/tripulacao-sanji.png" alt="Tripulação Sanji">
+            </button>
+        </li>
+    </ul>
+</body>
 
-1. **Aprimorar Habilidades em HTML, CSS e JavaScript**: Praticar e aperfeiçoar o uso dessas tecnologias.
-2. **Desenvolver uma Página Interativa**: Utilizar o JavaScript para criar uma experiência dinâmica para os usuários.
-3. **Aprimorar Habilidades de Design**: Utilizar o CSS para criar um layout atrativo e responsivo.
-
-## Próximos Passos
-
-Os próximos passos para este projeto podem incluir:
-
-- Adição de mais funcionalidades interativas e elementos visuais dinâmicos.
-- Melhoria do layout e design utilizando frameworks ou outras técnicas.
-- Otimização para diferentes dispositivos e tamanhos de tela.
-
----
-
-Este projeto serve como um espaço para praticar e aprimorar habilidades em HTML, CSS e JavaScript, enquanto nos envolvemos no emocionante mundo de One Piece.
-
-**Data de Início do Projeto:** [Inserir data de início]
-**Última Atualização:** [Inserir data da última atualização]
-
-Sinta-se à vontade para contribuir, fornecer feedback ou usar este projeto como base para seus próprios estudos e práticas. ⚓🏴‍☠️
+</html>
