--- a/idex.html
+++ b/idex.html
@@ -90,7 +90,7 @@
             </button>
         </li>
     </ul>
-    <script src="./src/js/control.js"></script>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
